[package]
name = "yare-rust-template"
version = "0.1.0"
authors = ["SWZ <contact@swz.works>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
yare = { git = "https://github.com/ViliamVadocz/yare-rust" }

[profile.release]
opt-level = 3
lto = true
