[package]
name = "yare-rust-template"
version = "0.1.0"
authors = ["SWZ <contact@swz.works>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
yareio = "0.1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
